--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.9.1",
     "redis": "^3.1.2",
     "socket.io": "^4.0.1",
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "serialport": "^9.0.7"
   }
 }
